gcc/testsuite/gdc.test/compilable/b16244.d
struct Foo
{
    void bar()(typeof(cast()this) x)
    {
    }
}

void main()
{
    Foo x;
    x.bar(x);
}
