gcc/testsuite/gdc.test/fail_compilation/fail4269b.d
enum bool WWW = is(typeof(A.x));

struct A {
    B blah;
    void foo(B b){} 
}

